tests/testcases/invalid/semantic/89_prefix_decrement_literal.ciel
// Error: prefix decrement on literal
int main() {
    // Error: literal is rvalue, prefix -- requires lvalue
    --99;

    return 0;
}
